--- a/package.json
+++ b/package.json
@@ -16,15 +16,34 @@
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
+    "@arshiash80/strapi-plugin-iconhub": "^1.0.2",
+    "@ef2/strapi-plugin-bold-title-editor": "^2.0.5",
     "@strapi/plugin-cloud": "5.13.1",
+    "@strapi/plugin-color-picker": "^5.14.0",
     "@strapi/plugin-users-permissions": "5.13.1",
     "@strapi/strapi": "5.13.1",
+    "@vasild/multi-date-picker": "^0.0.1",
+    "add": "^2.0.6",
     "better-sqlite3": "11.3.0",
     "fs-extra": "^10.0.0",
+    "group-arrange-strapi-plugin": "^0.1.8",
     "mime-types": "^2.1.27",
+    "pg": "^8.16.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
+    "strapi-5-sitemap-plugin": "^1.0.7",
+    "strapi-advanced-uuid": "^2.0.2",
+    "strapi-country-select": "^1.0.1",
+    "strapi-custom-action-perform-page": "^0.0.15",
+    "strapi-date-range-picker-5": "^1.0.11",
+    "strapi-import-export": "^0.0.1",
+    "strapi-location-picker": "^0.0.1",
+    "strapi-plugin-address-selection": "^1.0.1",
+    "strapi-plugin-icons-field": "^0.1.3",
+    "strapi-plugin-multi-select": "^2.1.1",
+    "strapi-plugin-populate-deep": "^3.0.1",
+    "strapi-plugin-superfields": "^5.8.2",
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
