--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,24 @@
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-TRANSFER_TOKEN_SALT=tobemodified
-JWT_SECRET=tobemodified
-ENCRYPTION_KEY=tobemodified
+APP_KEYS="TBD,TBD"
+API_TOKEN_SALT=TBD
+ADMIN_JWT_SECRET=TBD
+TRANSFER_TOKEN_SALT=TBD
+JWT_SECRET=TBD
+ENCRYPTION_KEY=TBD
+
+# Database configuration
+DATABASE_CLIENT=postgres
+DATABASE_HOST=TBD
+DATABASE_PORT=25060
+DATABASE_NAME=TBD
+DATABASE_USERNAME=TBD
+DATABASE_PASSWORD=TBD
+DATABASE_SSL=TBD
+DATABASE_SSL_REJECT_UNAUTHORIZED=TBD
+
+# DB connection pool settings
+DATABASE_KEEP_ALIVE=true
+DATABASE_KEEP_ALIVE_DELAY=30000
+DATABASE_POOL_IDLE_TIMEOUT=600000
+
