some elements designed

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 HOST=0.0.0.0
 PORT=1337
+
 APP_KEYS="TBD,TBD"
 API_TOKEN_SALT=TBD
 ADMIN_JWT_SECRET=TBD
@@ -9,16 +10,11 @@ ENCRYPTION_KEY=TBD
 
 # Database configuration
 DATABASE_CLIENT=postgres
-DATABASE_HOST=TBD
-DATABASE_PORT=25060
-DATABASE_NAME=TBD
-DATABASE_USERNAME=TBD
-DATABASE_PASSWORD=TBD
-DATABASE_SSL=TBD
-DATABASE_SSL_REJECT_UNAUTHORIZED=TBD
+DATABASE_URL=postgresql://TBD:TBD@TBD:TBD/TBD?sslmode=require
+DATABASE_SSL=true
+DATABASE_SSL_REJECT_UNAUTHORIZED=false
+NODE_TLS_REJECT_UNAUTHORIZED=0
 
 # DB connection pool settings
 DATABASE_KEEP_ALIVE=true
 DATABASE_KEEP_ALIVE_DELAY=30000
-DATABASE_POOL_IDLE_TIMEOUT=600000
-
